--- a/css/silahis.css
+++ b/css/silahis.css
@@ -1,298 +1,243 @@
-body {
-	padding-top: 50px;
-}
-
-#loginForm
+.navbar-fixed-top 
 {
-	background-color: #eeeeee;
+  background-color: #322c2c;
 }
 
-#search-form{
-	margin-top: -2px;
-	display: block;
-}
-
-#search-field {
-	font-size: 0.9em;
-    color: #5f574f;
-    width: 220px;
-    height: 20px;
-    padding-left: 10px;
-    border: 2px solid #e9e6df;
-    background-color: #fbfbf9;
-    border-radius: 8px;
-    position: relative;
-}
-
-#search-form #search-btn {
-    cursor: pointer;
-    border: 0;
-    height: 26px;
-    width: 26px;
-    background-color: transparent;
-    position: relative;
-  	right: 30px;
-}
-
-#search-form #search-btn i {
-    color: #5f574f;
-}
-
-.navbar-fixed-top
+p, h1, h2, h3, h4, h5, h6
 {
-	background-color: #322c2c;
+	font-family: Arial, sans-serif;
 }
 
-.navbar-default .navbar-nav > li > a {
-    background-color: rgba(0, 0, 0, 0);
-    color: #EEEEEE;
-}
-
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: rgba(0, 0, 0, 0);
-    color: #FFFFFF;
-}
-
-p, small, a, h1, h2, h3, h4, h5, h6, q, blockquote, li {
-	font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
-}
-
-/* Varying layouts begin here */
-
-hr
+h1, h2
 {
-	margin-bottom: 1px; 
-	margin-top: 1px;
+	font-weight: bold;
+	letter-spacing: -1px;
 }
 
-.two-col-news
+a:hover
 {
-	width: 227px;
-	height:142px;
+	text-decoration: none;
 }
 
-.homepage-header-indicator
+li#search 
 {
-	margin-top: 0px;
+    padding-top: 15px;
 }
-
-a.thumb 
+/*
+#silahis-menu
 {
-	display: block;
-	position: relative;
-}
-
-div
-{
-	display: block;
-}
-
-.img-width-340 
-{
-	width: 340px;
-}
-
-span.textOnImage 
-{
-	bottom: 0;
-	display: block;
+	height: 100%;
 	left: 0;
-	padding: 5px 10px;
-	position: absolute;
-	right: 0;
-	font-size: 1.333em;
-	font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
-	font-weight: normal;
-	text-shadow: 1px 1px 2px #000;
-	line-height: 1;
-	background: #111;
-	background: rgba(17,17,17,0.8);
+    position: fixed;
+    top: 0;
+}
+*/
+
+#events-calendar
+{
+  border: 1px solid #ccc;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.event-item {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.event-item a {
+  color: inherit;
+}
+
+.event-item .day {
+  background-color: #941a1e;
+  border: 1px solid #941a1e;
+  color: #eee;
+}
+
+.event-item .date {
+  border: 1px solid #dfdfdf;
+  color: #777;
+  margin-bottom: 10px;
+}
+
+.event-item span {
+  display: block;
+  padding: 5px;
+  text-align: center;
+}
+
+.event-item h5 {
+  color: #941a1e;
+  font-size: 0.9em;
+  font-weight: 600;
+  margin: 0;
+}
+
+#popular-opinion h1 
+{
+    background-color: #941a1e;
+    color: #f1f1f1;
+    margin-bottom: 0;
+    padding: 5px;
+}
+
+#popular-opinion-content
+{
+    background-color: #000000;
+}
+
+#popular-opinion-content a:hover
+{
+    text-decoration: none;
+}
+
+#popular-opinion-content a p
+{
+    color: #ffffff;
+    padding: 2px;
+}
+/*
+#popular-article-spotlight h1 
+{
+    background-color: #ededed;
+    margin-bottom: 0;
+    padding: 5px;
+}
+
+.spotlight-content-sidebar
+{
+	background-color: #ededed;
+	padding: 5px;
+}
+*/
+.article-sections ul li
+{
+	border-bottom: 1px solid #ccc;
+}
+
+.article-sections ul li a
+{
+	display: block;
+	padding: 10px;
+	color: #000000;
+}
+
+.article-sections ul li a.active, .article-sections li a:hover 
+{
+  	background-color: #941a1e;
+  	color: #ffffff;
+  	text-decoration: none;
+}
+
+/*========= CAROUSEL ==========*/
+
+#carousel-container{
+	
+}
+
+#carousel-homepage{
+	
+}
+
+#carousel-homepage img{
+   	min-width: 100%;
+	margin: auto;
+	overflow: hidden;
+	height: 390px;
 }
 
 .carousel-caption{
-    font-size: 1.333em;
-	font-family: 'ProximaNova', Arial, Helvetica, sans-serif;
-	font-weight: normal;
-	text-shadow: 1px 1px 2px #000;
-	line-height: 1;
-	background: #111;
-	background: rgba(17,17,17,0.8);
+	color: #ffffff;
+	text-shadow: none;
+	width: 100%;
+	margin: 0px;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
-a.carousel-headline
+.caption-left
+{
+	text-align: left;
+	left: 0;
+	bottom: 0;
+}
+
+.caption-right
+{
+	text-align: left;
+	left: 0;
+	bottom: 0;
+}
+
+.carousel-caption h2
+{
+	color: #ffffff;
+	margin: 0;
+}
+
+.carousel-caption p
+{
+	margin-top: 10px;
+}
+
+.carousel-caption a
 {
 	color: #ffffff;
 }
 
-.carousel-caption
+.carousel-caption a:hover
 {
-	left: 0;
-	bottom: 0;
-	width: 485px;
+	text-decoration: none;
 }
 
 .carousel-indicators
 {
-	bottom: 5px;
+	bottom: -40px;
 }
 
-.boundary
+#carousel-homepage .carousel-indicators li
 {
-	margin-left: -113px;
-	margin-right: -113px;
+	border: 1px solid #941a1e;
+	background-color: #000000;
 }
 
-.fixup
+#carousel-homepage .carousel-indicators li.active
+{
+	background-color: #941a1e;
+	border: 1px solid #000000;
+	height: 12px;
+	width: 12px;
+}
+
+/* More little details */
+
+.article-content-photo img
 {
 	width: 100%;
+	height: 390px;
+
+	/* DANGER! You need to create a media query rule for this, Rigby... */
 }
 
-.spotlight-image
-{
-	width: 100%;
-	height: 303px !important;
-}
+/* End of little details */
 
-.carousel-inner{
-  width:100%;
-  max-height: 303px !important;
-}
-
-a.thumb:link, a.thumb:visited 
-{
-	color: #eee;
-}
-
-li#search
-{
-	padding-top: 15px;
-}
-
-.sidenav 
-{
-	display:block; 
-	position:fixed; 
-	width:189px;
-	background-color:#6e6e6e;
-	margin-left: -30px;
-}
-
-.article-sections
-{
-	list-style-type:none;
-	margin:0;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 0;
-	padding-right: 0;
-}
-
-.section
-{
-display:block;
-font-weight:bold;
-color:#FFFFFF;
-width:189px;
-text-decoration:none;
-text-transform:uppercase;
-}
-
-a.section:hover,a.section:active,a.section:visited
-{
-background-color:#941a1e;
-text-decoration:none;
-color:#FFFFFF;
-}
-
-.section-spotlight-first
-{
-	padding-bottom: 10px;
-}
-
-.section-spotlight-nonfirst
-{
-	padding-top: 10px;
-	padding-bottom: 0;
-}
-
-#week-recent
-{
-	clear: both;
-    position: relative;
-    overflow: hidden;
-    width: 336px; 
-    margin: 16px 0 16px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    background: #ededed;
-}
-
-.footer
-{
-	background-color:#BABABA;
-}
-
-.footlink
-{
-	color: #000000;
-}
-
-.section-img
-{
-	width: 197px;
-	height: 111px;
-}
-
-/* Phones */
-@media screen and (max-width:480px) {
-	div
+@media (max-width: 768px) {
+	#carousel-container, #carousel-homepage
 	{
-		display: block;
+		margin: 0px;
+		padding: 0px;
 	}
 
-	.boundary
+	#carousel-homepage img
 	{
-		margin-left: 0; 
-		margin-right: 0;
-		margin-top: 70px;
+		max-width: 600px;
+		margin: auto;
 	}
 
-	.sidenav 
+	.carousel-caption h2
 	{
-		width:100%;
-	}
-
-	.article-sections
-	{
-		list-style-type:none;
-		margin:0;
-		padding-top: 20px;
-		padding-bottom: 20px;
-		padding-left: 0;
-		padding-right: 0;
-	}
-
-	.section
-	{
-		clear: both;
-		display:block;
-		width:100%;
-	}
-
-	.spotlight-image
-	{
+		font-size: 1.5em;
 		width: 100%;
-		height: 98px !important;
-	}
-
-	.carousel-inner
-	{
-  		width:100%;
-  		max-height: 98px !important;
-	}
-
-	a.carousel-headline
-	{
-		font-size: 8px;
 	}
 }
