--- a/css/silahis.css
+++ b/css/silahis.css
@@ -258,6 +258,11 @@ html body div.container-fluid div.navbar.navbar-default.navbar-fixed-top div#mai
 		width: 100vw;
 		background-color: rgba(148,26,30, 0.5);
 	}
+
+	.img-responsive.homepage-latest-article-img
+	{
+		height: auto;
+	}
 }
 
 @media (max-width: 320px) {
